# aula09_bootcamp

./: dados.parquet  etl.py  exemplo_00.py  logging_exemplo_erros.py  pipeline.py  pyproject.toml
